# KebsEngine

./: CMakeLists.txt  CMakePresets.json  README.md  install_sdl.ps1
src/: main.cpp
src/components/: CMakeLists.txt
src/graphics/: CMakeLists.txt
src/graphics/include/: animated-sprite.hpp  graphic-world.hpp  layer.hpp  screen.hpp  sprite.hpp  tile.hpp  tilemap.hpp
src/graphics/ressources/: map.json
src/graphics/src/: animated-sprite.cpp  graphic-world.cpp  screen.cpp  sprite.cpp  tilemap.cpp
src/physics/: CMakeLists.txt
src/physics/include/: collision-box.hpp  movable-object.hpp  physic-object.hpp  physic-world.hpp
src/physics/src/: collision-box.cpp  movable-object.cpp  physic-object.cpp  physic-world.cpp
